# cgf

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release_tag.yml
src/: api.rs  cli.rs  client.rs  displayer.rs  error.rs  finder.rs  lib.rs  main.rs  utils.rs
src/api/: chessdotcom.rs  lichessdotorg.rs  mod.rs
