[package]
name = "cgf"
description = "Find chess games!"
version = "0.2.0"
authors = ["Tomas Farias <tomas@tomasfarias.dev>"]
edition = "2018"

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
env_logger = "0.8"
openssl-probe = "0.1.2"
prettytable-rs = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shakmaty = "^0.18"
thiserror = "^1.0"
url = "^2.2"
